Creating modeling and evaluation

--- a/sentiment_analysis_model.ipynb
+++ b/sentiment_analysis_model.ipynb
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-10T05:11:22.021777Z",
-     "start_time": "2025-04-10T05:11:21.114790Z"
+     "end_time": "2025-04-10T05:30:56.470202Z",
+     "start_time": "2025-04-10T05:30:56.458099Z"
     }
    },
    "cell_type": "code",
@@ -24,6 +24,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
@@ -33,7 +39,7 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 78
   },
   {
    "metadata": {},
@@ -931,7 +937,7 @@
     "        reader = csv.reader(StringIO(response.text))\n",
     "        lexicon = {row[0]: int(row[1]) for row in reader}\n",
     "    else:\n",
-    "        print(f\"⚠️ Gagal fetch data dari: {url}\")\n",
+    "        print(f\"Gagal fetch data dari: {url}\")\n",
     "    return lexicon\n",
     "\n",
     "# Panggil untuk masing-masing\n",
@@ -1054,7 +1060,7 @@
     "positive_reviews = positive_reviews.reset_index(drop=True)\n",
     "positive_reviews.index += 1\n",
     "\n",
-    "print(\"📈 Review Paling Positif:\")\n",
+    "print(\"Review Paling Positif:\")\n",
     "display(positive_reviews.head(5))"
    ],
    "id": "9ac09fa7683b4673",
@@ -1165,7 +1171,7 @@
     "negative_reviews = negative_reviews.reset_index(drop=True)\n",
     "negative_reviews.index += 1\n",
     "\n",
-    "print(\"📉 Review Paling Negatif:\")\n",
+    "print(\"Review Paling Negatif:\")\n",
     "display(negative_reviews.head(5))"
    ],
    "id": "21d777f79638c844",
@@ -1276,7 +1282,7 @@
     "neutral_reviews = neutral_reviews.reset_index(drop=True)\n",
     "neutral_reviews.index += 1\n",
     "\n",
-    "print(\"😐 Review Netral (contoh acak):\")\n",
+    "print(\"Review Netral (contoh acak):\")\n",
     "display(neutral_reviews.sample(5))"
    ],
    "id": "afb42ec6c4b0ba20",
@@ -1549,11 +1555,441 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Data Splitting",
+   "id": "227140e84435589d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:17:47.348623Z",
+     "start_time": "2025-04-10T05:17:47.335009Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Fitur & Label\n",
+    "X = clean_df['text_akhir']\n",
+    "y = clean_df['lexicon_sentiment']"
+   ],
+   "id": "accc5a2144eeb8c",
+   "outputs": [],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:18:39.852649Z",
+     "start_time": "2025-04-10T05:18:39.823266Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Split Data\n",
+    "X_train_text, X_test_text, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, stratify=y, random_state=42\n",
+    ")"
+   ],
+   "id": "38cba1a9e0095189",
+   "outputs": [],
+   "execution_count": 67
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:18:48.163075Z",
+     "start_time": "2025-04-10T05:18:47.977125Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# TF-IDF Vectorizer\n",
+    "tfidf = TfidfVectorizer(max_features=200, min_df=10, max_df=0.8)\n",
+    "X_train = tfidf.fit_transform(X_train_text)\n",
+    "X_test = tfidf.transform(X_test_text)"
+   ],
+   "id": "ec541b9e97f35b0b",
+   "outputs": [],
+   "execution_count": 68
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Pemodelan",
+   "id": "49b799a3754d06c3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Naive Bayes",
+   "id": "f0df53f471dfb69c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:23:45.821713Z",
+     "start_time": "2025-04-10T05:23:45.667082Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Inisialisasi model Naive Bayes (BernoulliNB)\n",
+    "naive_bayes = BernoulliNB()\n",
+    "\n",
+    "# Fit model ke data training\n",
+    "naive_bayes.fit(X_train.toarray(), y_train)\n",
+    "\n",
+    "# Prediksi\n",
+    "y_pred_train_nb = naive_bayes.predict(X_train.toarray())\n",
+    "y_pred_test_nb = naive_bayes.predict(X_test.toarray())\n",
+    "\n",
+    "# Evaluasi akurasi\n",
+    "accuracy_train_nb = accuracy_score(y_train, y_pred_train_nb)\n",
+    "accuracy_test_nb = accuracy_score(y_test, y_pred_test_nb)\n",
+    "\n",
+    "print(\"Naive Bayes - Akurasi Training :\", accuracy_train_nb)\n",
+    "print(\"Naive Bayes - Akurasi Testing  :\", accuracy_test_nb)"
+   ],
+   "id": "2b5e500b4eead9b9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Naive Bayes - Akurasi Training : 0.811948751276576\n",
+      "✅ Naive Bayes - Akurasi Testing  : 0.8076494615670257\n"
+     ]
+    }
+   ],
+   "execution_count": 73
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Random Forest",
+   "id": "6b0f8c94cda94dd8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:26:24.348297Z",
+     "start_time": "2025-04-10T05:26:11.733301Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Random Forest - Akurasi Training : 0.9396991922755548\n",
+      "✅ Random Forest - Akurasi Testing  : 0.8323431117712589\n"
+     ]
+    }
+   ],
+   "execution_count": 75,
+   "source": [
+    "# Inisialisasi model Random Forest\n",
+    "random_forest = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Fit model ke data training\n",
+    "random_forest.fit(X_train.toarray(), y_train)\n",
+    "\n",
+    "# Prediksi\n",
+    "y_pred_train_rf = random_forest.predict(X_train.toarray())\n",
+    "y_pred_test_rf = random_forest.predict(X_test.toarray())\n",
+    "\n",
+    "# Evaluasi akurasi\n",
+    "accuracy_train_rf = accuracy_score(y_train, y_pred_train_rf)\n",
+    "accuracy_test_rf = accuracy_score(y_test, y_pred_test_rf)\n",
+    "\n",
+    "print(\"Random Forest - Akurasi Training :\", accuracy_train_rf)\n",
+    "print(\"Random Forest - Akurasi Testing  :\", accuracy_test_rf)"
+   ],
+   "id": "cdb2e5ecadd6b46d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Logistic Regression",
+   "id": "8c9875e2cb0064d4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:28:50.593440Z",
+     "start_time": "2025-04-10T05:28:49.622586Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Inisialisasi model\n",
+    "logistic_regression = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "\n",
+    "# Fit model ke data training\n",
+    "logistic_regression.fit(X_train.toarray(), y_train)\n",
+    "\n",
+    "# Prediksi\n",
+    "y_pred_train_lr = logistic_regression.predict(X_train.toarray())\n",
+    "y_pred_test_lr = logistic_regression.predict(X_test.toarray())\n",
+    "\n",
+    "# Evaluasi akurasi\n",
+    "accuracy_train_lr = accuracy_score(y_train, y_pred_train_lr)\n",
+    "accuracy_test_lr = accuracy_score(y_test, y_pred_test_lr)\n",
+    "\n",
+    "print(\"Logistic Regression - Akurasi Training :\", accuracy_train_lr)\n",
+    "print(\"Logistic Regression - Akurasi Testing  :\", accuracy_test_lr)"
+   ],
+   "id": "c568f44e1ac6d905",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression - Akurasi Training : 0.8593909571998886\n",
+      "Logistic Regression - Akurasi Testing  : 0.8525807649461568\n"
+     ]
+    }
+   ],
+   "execution_count": 77
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Decision Tree",
+   "id": "64a2eeb62d8eb39b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:31:02.836276Z",
+     "start_time": "2025-04-10T05:31:00.625428Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Inisialisasi model Decision Tree\n",
+    "decision_tree = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "# Training model\n",
+    "decision_tree.fit(X_train.toarray(), y_train)\n",
+    "\n",
+    "# Prediksi\n",
+    "y_pred_train_dt = decision_tree.predict(X_train.toarray())\n",
+    "y_pred_test_dt = decision_tree.predict(X_test.toarray())\n",
+    "\n",
+    "# Evaluasi akurasi\n",
+    "accuracy_train_dt = accuracy_score(y_train, y_pred_train_dt)\n",
+    "accuracy_test_dt = accuracy_score(y_test, y_pred_test_dt)\n",
+    "\n",
+    "print(\"Decision Tree - Akurasi Training :\", accuracy_train_dt)\n",
+    "print(\"Decision Tree - Akurasi Testing  :\", accuracy_test_dt)"
+   ],
+   "id": "5ddc0bcf9c0a9663",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree - Akurasi Training : 0.9397456132206852\n",
+      "Decision Tree - Akurasi Testing  : 0.792239138507241\n"
+     ]
+    }
+   ],
+   "execution_count": 79
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Evaluasi",
+   "id": "d815efc8dd38ee3c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:34:31.967347Z",
+     "start_time": "2025-04-10T05:34:31.937964Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Membuat DataFrame hasil evaluasi akurasi\n",
+    "results_df = pd.DataFrame({\n",
+    "    'Model': ['Naive Bayes', 'Random Forest', 'Logistic Regression', 'Decision Tree'],\n",
+    "    'Accuracy Train': [accuracy_train_nb, accuracy_train_rf, accuracy_train_lr, accuracy_train_dt],\n",
+    "    'Accuracy Test': [accuracy_test_nb, accuracy_test_rf, accuracy_test_lr, accuracy_test_dt]\n",
+    "})\n",
+    "\n",
+    "# Menampilkan semua akurasi\n",
+    "print(\"Akurasi Train & Test Semua Model:\")\n",
+    "display(results_df)\n",
+    "\n",
+    "# Menampilkan hanya Accuracy Test, diurutkan\n",
+    "accuracy_test_sorted = results_df[['Model', 'Accuracy Test']].sort_values(by='Accuracy Test', ascending=False)\n",
+    "\n",
+    "print(\"\\nModel dengan Akurasi Testing Tertinggi:\")\n",
+    "display(accuracy_test_sorted)"
+   ],
+   "id": "18c15f24e227c72b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Akurasi Train & Test Semua Model:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                 Model  Accuracy Train  Accuracy Test\n",
+       "0          Naive Bayes        0.811949       0.807649\n",
+       "1        Random Forest        0.939699       0.832343\n",
+       "2  Logistic Regression        0.859391       0.852581\n",
+       "3        Decision Tree        0.939746       0.792239"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Accuracy Train</th>\n",
+       "      <th>Accuracy Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Naive Bayes</td>\n",
+       "      <td>0.811949</td>\n",
+       "      <td>0.807649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.939699</td>\n",
+       "      <td>0.832343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.859391</td>\n",
+       "      <td>0.852581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.939746</td>\n",
+       "      <td>0.792239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model dengan Akurasi Testing Tertinggi:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                 Model  Accuracy Test\n",
+       "2  Logistic Regression       0.852581\n",
+       "1        Random Forest       0.832343\n",
+       "0          Naive Bayes       0.807649\n",
+       "3        Decision Tree       0.792239"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Accuracy Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.852581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.832343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Naive Bayes</td>\n",
+       "      <td>0.807649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.792239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 80
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Inference (Prediksi Kalimat Baru)",
+   "id": "807ddb7fa4a90400"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "cde88265f0ee542e"
+   "id": "1cfffed793801479"
   }
  ],
  "metadata": {
