--- a/sentiment_analysis_model.ipynb
+++ b/sentiment_analysis_model.ipynb
@@ -254,8 +254,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T04:20:30.385576Z",
-     "start_time": "2025-04-10T04:20:30.371485Z"
+     "end_time": "2025-04-10T05:39:23.249189Z",
+     "start_time": "2025-04-10T05:39:23.235140Z"
     }
    },
    "cell_type": "code",
@@ -299,13 +299,11 @@
     "    return text\n",
     "\n",
     "# 5. Stemming\n",
-    "def stemmingText(text):\n",
+    "def stemmingText(words):\n",
     "    factory = StemmerFactory()\n",
     "    stemmer = factory.create_stemmer()\n",
-    "    words = text.split()\n",
     "    stemmed_words = [stemmer.stem(word) for word in words]\n",
-    "    stemmed_text = ' '.join(stemmed_words)\n",
-    "    return stemmed_text\n",
+    "    return stemmed_words\n",
     "\n",
     "# 6. To Sentence\n",
     "def toSentence(list_words):\n",
@@ -314,7 +312,7 @@
    ],
    "id": "f6e50b0f7808e9e7",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 84
   },
   {
    "metadata": {
@@ -1801,6 +1799,20 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "# Pemodelan Menggunakan Deep Learning",
+   "id": "f71703355f8597b0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a29aebd255fb29c4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "# Evaluasi",
    "id": "d815efc8dd38ee3c"
   },
@@ -1812,25 +1824,6 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# Membuat DataFrame hasil evaluasi akurasi\n",
-    "results_df = pd.DataFrame({\n",
-    "    'Model': ['Naive Bayes', 'Random Forest', 'Logistic Regression', 'Decision Tree'],\n",
-    "    'Accuracy Train': [accuracy_train_nb, accuracy_train_rf, accuracy_train_lr, accuracy_train_dt],\n",
-    "    'Accuracy Test': [accuracy_test_nb, accuracy_test_rf, accuracy_test_lr, accuracy_test_dt]\n",
-    "})\n",
-    "\n",
-    "# Menampilkan semua akurasi\n",
-    "print(\"Akurasi Train & Test Semua Model:\")\n",
-    "display(results_df)\n",
-    "\n",
-    "# Menampilkan hanya Accuracy Test, diurutkan\n",
-    "accuracy_test_sorted = results_df[['Model', 'Accuracy Test']].sort_values(by='Accuracy Test', ascending=False)\n",
-    "\n",
-    "print(\"\\nModel dengan Akurasi Testing Tertinggi:\")\n",
-    "display(accuracy_test_sorted)"
-   ],
-   "id": "18c15f24e227c72b",
    "outputs": [
     {
      "name": "stdout",
@@ -1975,7 +1968,26 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 80
+   "execution_count": 80,
+   "source": [
+    "# Membuat DataFrame hasil evaluasi akurasi\n",
+    "results_df = pd.DataFrame({\n",
+    "    'Model': ['Naive Bayes', 'Random Forest', 'Logistic Regression', 'Decision Tree'],\n",
+    "    'Accuracy Train': [accuracy_train_nb, accuracy_train_rf, accuracy_train_lr, accuracy_train_dt],\n",
+    "    'Accuracy Test': [accuracy_test_nb, accuracy_test_rf, accuracy_test_lr, accuracy_test_dt]\n",
+    "})\n",
+    "\n",
+    "# Menampilkan semua akurasi\n",
+    "print(\"Akurasi Train & Test Semua Model:\")\n",
+    "display(results_df)\n",
+    "\n",
+    "# Menampilkan hanya Accuracy Test, diurutkan\n",
+    "accuracy_test_sorted = results_df[['Model', 'Accuracy Test']].sort_values(by='Accuracy Test', ascending=False)\n",
+    "\n",
+    "print(\"\\nModel dengan Akurasi Testing Tertinggi:\")\n",
+    "display(accuracy_test_sorted)"
+   ],
+   "id": "18c15f24e227c72b"
   },
   {
    "metadata": {},
@@ -1984,11 +1996,49 @@
    "id": "807ddb7fa4a90400"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T05:43:13.482670Z",
+     "start_time": "2025-04-10T05:43:11.948554Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Kalimat: Sampai saat ini tidak ada kendala.\n",
+      "Hasil Preprocessing: kendala\n",
+      "Prediksi Sentimen: NETRAL\n"
+     ]
+    }
+   ],
+   "execution_count": 92,
+   "source": [
+    "# Input kalimat dari user\n",
+    "kalimat_baru = input(\"Masukkan kalimat baru: \")\n",
+    "\n",
+    "# Preprocessing kalimat\n",
+    "cleaned = cleaningText(kalimat_baru)\n",
+    "scaffolding = scaffoldingText(cleaned)\n",
+    "tokenized = tokenizingText(scaffolding)\n",
+    "filteredInference = filteringText(tokenized)\n",
+    "stemmed = stemmingText(filteredInference)\n",
+    "final_sentence = toSentence(stemmed)\n",
+    "\n",
+    "# Transform pakai TF-IDF yang udah di-fit sebelumnya\n",
+    "X_kalimat_baru = tfidf.transform([final_sentence])\n",
+    "\n",
+    "# Prediksi pakai model terbaik (logistic regression)\n",
+    "prediksi_sentimen = logistic_regression.predict(X_kalimat_baru)\n",
+    "\n",
+    "# Tampilkan hasil\n",
+    "print(f\"\\nKalimat: {kalimat_baru}\")\n",
+    "print(f\"Hasil Preprocessing: {final_sentence}\")\n",
+    "print(f\"Prediksi Sentimen: {prediksi_sentimen[0].upper()}\")"
+   ],
    "id": "1cfffed793801479"
   }
  ],
