--- a/sentiment_analysis_model.ipynb
+++ b/sentiment_analysis_model.ipynb
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-10T05:30:56.470202Z",
-     "start_time": "2025-04-10T05:30:56.458099Z"
+     "end_time": "2025-04-10T06:24:05.691651Z",
+     "start_time": "2025-04-10T06:24:05.678646Z"
     }
    },
    "cell_type": "code",
@@ -23,6 +23,8 @@
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -35,11 +37,16 @@
     "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
     "from wordcloud import WordCloud\n",
     "from io import StringIO\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, Reshape, Dense, Bidirectional, LSTM, Dropout\n",
+    "from tensorflow.keras.callbacks import EarlyStopping"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 78
+   "execution_count": 105
   },
   {
    "metadata": {},
@@ -1803,12 +1810,262 @@
    "id": "f71703355f8597b0"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:11:03.522655Z",
+     "start_time": "2025-04-10T06:11:02.887546Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "# Ambil teks dan label\n",
+    "X = clean_df['text_akhir'].values\n",
+    "y = clean_df['lexicon_sentiment'].values  # atau label terbaik lo\n",
+    "\n",
+    "# Tokenizer\n",
+    "MAX_VOCAB = 10000\n",
+    "tokenizer = Tokenizer(num_words=MAX_VOCAB, oov_token=\"<OOV>\")\n",
+    "tokenizer.fit_on_texts(X)\n",
+    "X_sequences = tokenizer.texts_to_sequences(X)\n",
+    "\n",
+    "# Padding\n",
+    "MAX_LENGTH = 150\n",
+    "X_padded = pad_sequences(X_sequences, maxlen=MAX_LENGTH, padding=\"post\", truncating=\"post\")"
+   ],
+   "id": "a29aebd255fb29c4",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "a29aebd255fb29c4"
+   "execution_count": 94
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:11:32.690575Z",
+     "start_time": "2025-04-10T06:11:32.629347Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Encode Label\n",
+    "unique_labels = list(set(y))\n",
+    "label_encoder = tf.keras.layers.StringLookup(vocabulary=unique_labels, mask_token=None)\n",
+    "y_encoded = label_encoder(y).numpy()\n",
+    "\n",
+    "# Cek label\n",
+    "print(\"Label Mapping:\", dict(zip(label_encoder.get_vocabulary(), range(len(label_encoder.get_vocabulary())))))"
+   ],
+   "id": "3514c7f0ae170097",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label Mapping: {'[UNK]': 0, np.str_('negatif'): 1, np.str_('positif'): 2, np.str_('netral'): 3}\n"
+     ]
+    }
+   ],
+   "execution_count": 96
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:11:46.195610Z",
+     "start_time": "2025-04-10T06:11:46.181543Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Split Train/Test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_padded, y_encoded, test_size=0.3, random_state=42\n",
+    ")"
+   ],
+   "id": "e4e0c96911d0fc01",
+   "outputs": [],
+   "execution_count": 97
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:13:15.763426Z",
+     "start_time": "2025-04-10T06:13:14.246769Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Generate Skip-Gram Pairs\n",
+    "skip_grams = []\n",
+    "window_size = 4\n",
+    "\n",
+    "for text in X_train:\n",
+    "    for i, target in enumerate(text):\n",
+    "        if target == 0:\n",
+    "            continue\n",
+    "        for j in range(max(i - window_size, 0), min(i + window_size + 1, len(text))):\n",
+    "            context = text[j]\n",
+    "            if i != j and context != 0:\n",
+    "                skip_grams.append([target, context])\n",
+    "\n",
+    "target_words = np.array([pair[0] for pair in skip_grams])\n",
+    "context_words = np.array([pair[1] for pair in skip_grams])"
+   ],
+   "id": "35122b6e0b79d7b6",
+   "outputs": [],
+   "execution_count": 100
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:19:29.224644Z",
+     "start_time": "2025-04-10T06:13:44.915848Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Train Skip-Gram Embedding Model\n",
+    "embedding_dim = 300\n",
+    "vocabulary_size = min(MAX_VOCAB, len(tokenizer.word_index) + 1)\n",
+    "\n",
+    "model_skipgram = Sequential([\n",
+    "    Embedding(input_dim=vocabulary_size, output_dim=embedding_dim),\n",
+    "    Reshape((embedding_dim,)),\n",
+    "    Dense(vocabulary_size, activation='softmax'),\n",
+    "])\n",
+    "\n",
+    "model_skipgram.compile(loss='sparse_categorical_crossentropy', optimizer='adam')\n",
+    "model_skipgram.fit(target_words, context_words, epochs=5, batch_size=1024)"
+   ],
+   "id": "58ed33dd20a1d011",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "\u001B[1m537/537\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m69s\u001B[0m 128ms/step - loss: 8.0098\n",
+      "Epoch 2/5\n",
+      "\u001B[1m537/537\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m74s\u001B[0m 138ms/step - loss: 6.6807\n",
+      "Epoch 3/5\n",
+      "\u001B[1m537/537\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m68s\u001B[0m 127ms/step - loss: 6.5099\n",
+      "Epoch 4/5\n",
+      "\u001B[1m537/537\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m71s\u001B[0m 131ms/step - loss: 6.3631\n",
+      "Epoch 5/5\n",
+      "\u001B[1m537/537\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m62s\u001B[0m 116ms/step - loss: 6.2161\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x1e5176483d0>"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 103
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:24:36.213631Z",
+     "start_time": "2025-04-10T06:24:36.199339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Ambil Embedding Matrix\n",
+    "embedding_matrix = model_skipgram.layers[0].get_weights()[0]"
+   ],
+   "id": "ba181d10af5ec54f",
+   "outputs": [],
+   "execution_count": 106
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:24:41.607516Z",
+     "start_time": "2025-04-10T06:24:41.530889Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Bangun BiLSTM Model Final\n",
+    "model_bilstm = Sequential([\n",
+    "    Embedding(\n",
+    "        input_dim=vocabulary_size,\n",
+    "        output_dim=embedding_dim,\n",
+    "        weights=[embedding_matrix],\n",
+    "        trainable=True\n",
+    "    ),\n",
+    "    Bidirectional(LSTM(64, return_sequences=True)),\n",
+    "    Dropout(0.3),\n",
+    "    Bidirectional(LSTM(32)),\n",
+    "    Dropout(0.3),\n",
+    "    Dense(64, activation=\"relu\"),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(32, activation=\"relu\"),\n",
+    "    Dense(len(label_encoder.get_vocabulary()), activation=\"softmax\")\n",
+    "])\n",
+    "\n",
+    "# Compile model\n",
+    "model_bilstm.compile(\n",
+    "    loss=\"sparse_categorical_crossentropy\",\n",
+    "    optimizer=\"rmsprop\",\n",
+    "    metrics=[\"accuracy\"]\n",
+    ")\n",
+    "\n",
+    "# Early Stopping biar gak overfit\n",
+    "early_stop = EarlyStopping(monitor=\"val_loss\", patience=3, restore_best_weights=True)"
+   ],
+   "id": "d3dc8fec75deef27",
+   "outputs": [],
+   "execution_count": 107
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:31:03.033294Z",
+     "start_time": "2025-04-10T06:24:53.138145Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Train Model BiLSTM\n",
+    "history = model_bilstm.fit(\n",
+    "    X_train,\n",
+    "    y_train,\n",
+    "    epochs=20,\n",
+    "    batch_size=64,\n",
+    "    validation_data=(X_test, y_test),\n",
+    "    callbacks=[early_stop],\n",
+    "    verbose=1\n",
+    ")"
+   ],
+   "id": "c361a88498f14e3f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m60s\u001B[0m 185ms/step - accuracy: 0.6063 - loss: 0.8648 - val_accuracy: 0.8600 - val_loss: 0.3767\n",
+      "Epoch 2/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m53s\u001B[0m 179ms/step - accuracy: 0.8755 - loss: 0.3500 - val_accuracy: 0.9157 - val_loss: 0.2475\n",
+      "Epoch 3/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m53s\u001B[0m 179ms/step - accuracy: 0.9187 - loss: 0.2407 - val_accuracy: 0.9212 - val_loss: 0.2270\n",
+      "Epoch 4/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m54s\u001B[0m 184ms/step - accuracy: 0.9357 - loss: 0.1872 - val_accuracy: 0.9349 - val_loss: 0.1958\n",
+      "Epoch 5/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m50s\u001B[0m 171ms/step - accuracy: 0.9502 - loss: 0.1467 - val_accuracy: 0.9332 - val_loss: 0.2156\n",
+      "Epoch 6/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m50s\u001B[0m 170ms/step - accuracy: 0.9568 - loss: 0.1280 - val_accuracy: 0.9249 - val_loss: 0.2234\n",
+      "Epoch 7/20\n",
+      "\u001B[1m295/295\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m49s\u001B[0m 167ms/step - accuracy: 0.9644 - loss: 0.1074 - val_accuracy: 0.9224 - val_loss: 0.2753\n"
+     ]
+    }
+   ],
+   "execution_count": 108
   },
   {
    "metadata": {},
@@ -1990,6 +2247,34 @@
    "id": "18c15f24e227c72b"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T06:32:46.510916Z",
+     "start_time": "2025-04-10T06:32:19.459215Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Evaluasi Model Deep Learning\n",
+    "train_acc_dl = model_bilstm.evaluate(X_train, y_train, verbose=0)[1]\n",
+    "test_acc_dl = model_bilstm.evaluate(X_test, y_test, verbose=0)[1]\n",
+    "\n",
+    "print(f\"\\nBiLSTM + Skip-gram = Train Acc: {train_acc_dl:.4f}, Test Acc: {test_acc_dl:.4f}\")"
+   ],
+   "id": "2b571de2e747b60f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ [Skema 4] BiLSTM + Skip-gram | Train Acc: 0.9564, Test Acc: 0.9349\n"
+     ]
+    }
+   ],
+   "execution_count": 109
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "# Inference (Prediksi Kalimat Baru)",
@@ -1998,48 +2283,56 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T05:43:13.482670Z",
-     "start_time": "2025-04-10T05:43:11.948554Z"
+     "end_time": "2025-04-10T06:38:23.369249Z",
+     "start_time": "2025-04-10T06:38:14.225849Z"
     }
    },
    "cell_type": "code",
+   "source": [
+    "# Input kalimat dari user\n",
+    "kalimat_baru = input(\"Masukkan kalimat baru: \")\n",
+    "\n",
+    "# Preprocessing\n",
+    "cleaned = cleaningText(kalimat_baru)\n",
+    "scaffolding = scaffoldingText(cleaned)\n",
+    "tokenized = tokenizingText(scaffolding)\n",
+    "filtered = filteringText(tokenized)\n",
+    "stemmed = stemmingText(filtered)\n",
+    "final_sentence = toSentence(stemmed)\n",
+    "\n",
+    "# Logistic Regression\n",
+    "X_kalimat_lr = tfidf.transform([final_sentence])\n",
+    "prediksi_lr = logistic_regression.predict(X_kalimat_lr)[0]\n",
+    "\n",
+    "# Deep Learning BiLSTM\n",
+    "sequence = tokenizer.texts_to_sequences([final_sentence])\n",
+    "padded = pad_sequences(sequence, maxlen=MAX_LENGTH, padding='post')\n",
+    "prediksi_dl_index = model_bilstm.predict(padded).argmax(axis=1)[0]\n",
+    "prediksi_dl = label_encoder.get_vocabulary()[prediksi_dl_index]\n",
+    "\n",
+    "print(f\"\\nKalimat: {kalimat_baru}\")\n",
+    "print(f\"Setelah Preprocessing: {final_sentence}\")\n",
+    "print(\"Hasil Prediksi:\")\n",
+    "print(f\"  Logistic Regression : {prediksi_lr.upper()}\")\n",
+    "print(f\"  BiLSTM (Deep Learning): {prediksi_dl.upper()}\")"
+   ],
+   "id": "1cfffed793801479",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 42ms/step\n",
       "\n",
-      "Kalimat: Sampai saat ini tidak ada kendala.\n",
-      "Hasil Preprocessing: kendala\n",
-      "Prediksi Sentimen: NETRAL\n"
+      "Kalimat: aapp nya ramah dan membantu banget\n",
+      "Setelah Preprocessing: aapp ramah bantu banget\n",
+      "Hasil Prediksi:\n",
+      "  Logistic Regression : POSITIF\n",
+      "  BiLSTM (Deep Learning): POSITIF\n"
      ]
     }
    ],
-   "execution_count": 92,
-   "source": [
-    "# Input kalimat dari user\n",
-    "kalimat_baru = input(\"Masukkan kalimat baru: \")\n",
-    "\n",
-    "# Preprocessing kalimat\n",
-    "cleaned = cleaningText(kalimat_baru)\n",
-    "scaffolding = scaffoldingText(cleaned)\n",
-    "tokenized = tokenizingText(scaffolding)\n",
-    "filteredInference = filteringText(tokenized)\n",
-    "stemmed = stemmingText(filteredInference)\n",
-    "final_sentence = toSentence(stemmed)\n",
-    "\n",
-    "# Transform pakai TF-IDF yang udah di-fit sebelumnya\n",
-    "X_kalimat_baru = tfidf.transform([final_sentence])\n",
-    "\n",
-    "# Prediksi pakai model terbaik (logistic regression)\n",
-    "prediksi_sentimen = logistic_regression.predict(X_kalimat_baru)\n",
-    "\n",
-    "# Tampilkan hasil\n",
-    "print(f\"\\nKalimat: {kalimat_baru}\")\n",
-    "print(f\"Hasil Preprocessing: {final_sentence}\")\n",
-    "print(f\"Prediksi Sentimen: {prediksi_sentimen[0].upper()}\")"
-   ],
-   "id": "1cfffed793801479"
+   "execution_count": 116
   }
  ],
  "metadata": {
